src/components/ResourceBrowser/ResourceBrowser.scss
/*
 * Copyright (c) 2024. Devtron Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

@import '../v2/appDetails/k8Resource/k8resources.scss';

.resource-browser-container {
    min-width: 1024px;

    .resource-browser-tab {
        .dynamic-tabs-section {
            .dynamic-tabs-container,
            .fixed-tabs-container {
                .dynamic-tabs-wrapper,
                .fixed-tabs-wrapper {
                    .dynamic-tab-selected {
                        border-top: none;
                        border-radius: 0;
                    }
                }
            }
        }
    }

    .resource-browser {
        display: grid;
        grid-template-columns: 220px auto;

        .k8s-object-container {
            .k8s-object-kind-search {
                .kind-search-select__value-container {
                    .kind-search-icon {
                        path:nth-child(2) {
                            fill: var(--N600);
                        }
                    }
                }

                .kind-search-select__input-container {
                    input {
                        max-width: 135px;
                    }
                }

                .kind-search-select__menu {
                    margin-top: 4px;

                    .kind-search-select__menu-list {
                        .kind-search-select__option {
                            &--highlight {
                                padding: 0;
                                background-color: var(--Y200);
                            }
                        }
                    }
                }

                .kind-search-select__indicators {
                    position: absolute;
                    top: 15px;
                    right: 0;

                    .clear-kind-search-icon {
                        rect {
                            fill: var(--N600);
                        }
                    }

                    .kind-search-shortcut-key {
                        right: 10px;
                        top: -10px;
                    }
                }
            }

            .k8s-object-wrapper {
                height: calc(100vh - 140px);
                overflow: auto;

                .resource-tree-object:hover {
                    background-color: var(--N50);
                    color: var(--N900);
                }
            }
        }

        .resource-list-container {
            &.no-result-container {
                height: calc(100vh - 92px);
                overflow: hidden;
            }

            .resource-filter-options-container {
                .resource-filter-options-wrapper {
                    .resource-filter-select__input-container {
                        input {
                            max-width: 150px;
                        }
                    }
                }

                &__search-box {
                    .resource-search-shortcut-key {
                        right: 8px;
                        top: 50%;
                        transform: translateY(-50%);
                    }
                }
            }
            .scrollable-resource-list {
                height: calc(100vh - 144px);
                &.paginated-list-view {
                    height: calc(100vh - 201px);
                }

                &.sync-error {
                    height: calc(100vh - 176px);
                }

                &.paginated-list-view-with-sync-error {
                    height: calc(100vh - 233px);
                }
                &__row {
                    width: max-content;
                    display: grid;

                    & > :first-child {
                        position: sticky;
                        left: 0;
                        z-index: 1;
                        background-color: var(--N0);
                        border-right: 1px solid var(--N200);
                        padding-left: 20px;
                    }

                    & > :last-child {
                        padding-right: 20px;
                    }
                }
            }

            .scrollable-event-list {
                height: calc(100vh - 180px);
                &.paginated-list-view {
                    height: calc(100vh - 237px);
                }

                &.sync-error {
                    height: calc(100vh - 212px);
                }

                &.paginated-list-view-with-sync-error {
                    height: calc(100vh - 269px);
                }
            }

            .scrollable-resource-list,
            .scrollable-event-list {
                .hover-class {
                    &:hover {
                        background-color: var(--N50);
                        .sticky-column {
                            background-color: var(--N50);
                        }

                        .restart-icon path {
                            stroke: var(--B500);
                        }
                    }
                }
            }

            .pagination-wrapper {
                &.resource-browser-paginator {
                    .select__button {
                        width: fit-content;
                    }
                }
            }

            .sticky-column {
                left: 0;
                z-index: 1;
                background-color: var(--N0);
            }

            .event-list-row {
                display: grid;
                grid-template-columns: 80px minmax(200px, auto) 130px 200px 150px repeat(3, 70px);
                column-gap: 16px;
            }

            .node-actions-menu-icon {
                path:nth-child(2) {
                    fill: var(--N600);
                }
            }
        }
    }
}

.create-resource-container {
    .created-resource-row {
        display: grid;
        grid-template-columns: 150px 200px 150px auto;
        grid-column-gap: 16px;
    }

    .created-resource-list {
        height: calc(100vh - 202px);
        min-height: 220px;
        overflow-y: auto;

        .created-resource-row {
            &:hover {
                background-color: var(--N50);
            }
        }
    }
}

.resource-details-container {
    height: calc(100vh - 84px);
}

.cluster-terminal-hidden {
    visibility: hidden;
    height: 0;
    .terminal-action-strip {
        display: none;
      }
}

.cluster-terminal-hidden * {
    height: 0 !important;
}

